# deskflow

./: .cirrus.yml  .clang-format  .editorconfig  .env.example  .gdbinit  .gitattributes  .gitignore  .gitmodules  .lldbinit  .project  .secrets  .travis.yml  1.patch  AUTHORS  AboutDialog_8cpp.html  AboutDialog_8cpp__incl.map  AboutDialog_8cpp__incl.md5  AboutDialog_8h.html  AboutDialog_8h.js  AboutDialog_8h__dep__incl.map  AboutDialog_8h__dep__incl.md5  AboutDialog_8h__incl.map  AboutDialog_8h__incl.md5  AboutDialog_8h_source.html  ActionDialog_8cpp.html  ActionDialog_8cpp__incl.map  ActionDialog_8cpp__incl.md5  ActionDialog_8h.html  ActionDialog_8h.js  ActionDialog_8h__dep__incl.map  ActionDialog_8h__dep__incl.md5  ActionDialog_8h__incl.map  ActionDialog_8h__incl.md5  ActionDialog_8h_source.html  Action_8cpp.html  Action_8cpp.js  Action_8cpp__incl.map  Action_8cpp__incl.md5  Action_8h.html  Action_8h.js  (+6203 more)
client/: CClient.cpp  CClient.h  CMSWindowsSecondaryScreen.cpp  CMSWindowsSecondaryScreen.h  CSecondaryScreen.cpp  CSecondaryScreen.h  CServerProxy.cpp  CServerProxy.h  CXWindowsSecondaryScreen.cpp  CXWindowsSecondaryScreen.h  ISecondaryScreen.h  Makefile  Makefile.am  client.cpp  client.dsp
deploy/: CMakeLists.txt  org.deskflow.deskflow.metainfo.xml  version.rc.in
doc/: .svnignore  CMakeLists.txt  CMakeUserPresets.json  MacReadme.txt  Makefile.am  QtCodeStyle.xml  README  UpdateManpages.txt  authors.html  autostart.html  banner.html  barrier.conf.example  barrier.conf.example-advanced  barrier.conf.example-barebones  barrier.conf.example-basic  barrierc.1  barrierc.man  barriers.1  barriers.man  border.html  build.md  build.py  compiling.html  config.toml.example  configuration.html  configuration.md  deskflow-config.toml.example  developer.html  doxygen-custom.css  doxygen.cfg  doxygen.cfg.in  faq.html  flash_tutorial.md  history.html  home.html  index.html  license.html  mainpage.md  news.html  org.barrier-foss.org.barrierc.plist  (+19 more)
ext/: CMakeLists.txt
http/: CHTTPProtocol.cpp  CHTTPProtocol.h  Makefile  Makefile.am  XHTTP.cpp  XHTTP.h  http.dsp
io/: CBufferedInputStream.cpp  CBufferedInputStream.h  CBufferedOutputStream.cpp  CBufferedOutputStream.h  CInputStreamFilter.cpp  CInputStreamFilter.h  COutputStreamFilter.cpp  COutputStreamFilter.h  CStreamBuffer.cpp  CStreamBuffer.h  IInputStream.h  IOutputStream.h  Makefile  Makefile.am  XIO.cpp  XIO.h  io.dsp
lib/: Makefile.am
mt/: CCondVar.cpp  CCondVar.h  CLock.cpp  CLock.h  CMutex.cpp  CMutex.h  CThread.cpp  CThread.h  CThreadRep.cpp  CThreadRep.h  CTimerThread.cpp  CTimerThread.h  Makefile  Makefile.am  XThread.h  mt.dsp
net/: CNetwork.cpp  CNetwork.h  CNetworkAddress.cpp  CNetworkAddress.h  CSocketInputStream.cpp  CSocketInputStream.h  CSocketOutputStream.cpp  CSocketOutputStream.h  CSocketStreamBuffer.cpp  CSocketStreamBuffer.h  CTCPListenSocket.cpp  CTCPListenSocket.h  CTCPSocket.cpp  CTCPSocket.h  IDataSocket.h  IListenSocket.h  ISocket.h  Makefile  Makefile.am  XNetwork.cpp  XNetwork.h  XSocket.cpp  XSocket.h  net.dsp
platform/: CMSWindowsClipboard.cpp  CMSWindowsClipboard.h  CMSWindowsClipboardAnyTextConverter.cpp  CMSWindowsClipboardAnyTextConverter.h  CMSWindowsClipboardTextConverter.cpp  CMSWindowsClipboardTextConverter.h  CMSWindowsClipboardUTF16Converter.cpp  CMSWindowsClipboardUTF16Converter.h  CMSWindowsScreen.cpp  CMSWindowsScreen.h  CMSWindowsScreenSaver.cpp  CMSWindowsScreenSaver.h  CPlatform.cpp  CPlatform.h  CSynergyHook.cpp  CSynergyHook.h  CUnixPlatform.cpp  CUnixPlatform.h  CWin32Platform.cpp  CWin32Platform.h  CXWindowsClipboard.cpp  CXWindowsClipboard.h  CXWindowsClipboardTextConverter.cpp  CXWindowsClipboardTextConverter.h  CXWindowsClipboardUCS2Converter.cpp  CXWindowsClipboardUCS2Converter.h  CXWindowsClipboardUTF8Converter.cpp  CXWindowsClipboardUTF8Converter.h  CXWindowsScreen.cpp  CXWindowsScreen.h  CXWindowsScreenSaver.cpp  CXWindowsScreenSaver.h  CXWindowsUtil.cpp  CXWindowsUtil.h  IMSWindowsScreenEventHandler.h  IPlatform.h  Makefile  Makefile.am  platform.dsp  synrgyhk.dsp
scripts/: activate_rhel.sh  build-vhid-driver.ps1  build-windows.ps1  buildCoreLinux.sh  buildCoreMacos.sh  buildCoreWindows.ps1  build_version.py  daemon.py  fancy_copy.py  get_version.py  github.py  github_env.py  install-macos.sh  install-vhid-driver.ps1  install-windows.ps1  install.sh  install_deps.py  install_deps.sh  lint_clang.py  lint_cmake.py  lint_cmake_files.py  lint_cmake_files.sh  mac_package.py  package.py  pyproject.toml  quit-all-windows.ps1  rename_tags.sh  requirements.txt  rhel.sh  setup_venv.py  sync-debug-settings-macos.sh  sync-debug-settings-windows.ps1  tests.py  windows_daemon.py
server/: CClientProxy.cpp  CClientProxy.h  CClientProxy1_0.cpp  CClientProxy1_0.h  CConfig.cpp  CConfig.h  CHTTPServer.cpp  CHTTPServer.h  CMSWindowsPrimaryScreen.cpp  CMSWindowsPrimaryScreen.h  CPrimaryClient.cpp  CPrimaryClient.h  CPrimaryScreen.cpp  CPrimaryScreen.h  CScreenMap.cpp  CScreenMap.h  CServer.cpp  CServer.h  CServerProtocol.cpp  CServerProtocol.h  CServerProtocol1_0.cpp  CServerProtocol1_0.h  CSynergyHook.cpp  CSynergyHook.h  CXWindowsPrimaryScreen.cpp  CXWindowsPrimaryScreen.h  IPrimaryReceiver.h  IPrimaryScreen.h  IServerProtocol.h  Makefile  Makefile.am  makehook.dsp  server.cpp  server.dsp  synrgyhk.dsp
src/: CMakeLists.txt
synergy/: CClient.cpp  CClient.h  CClipboard.cpp  CClipboard.h  CInputPacketStream.cpp  CInputPacketStream.h  CMSWindowsClipboard.cpp  CMSWindowsClipboard.h  CMSWindowsScreen.cpp  CMSWindowsScreen.h  COutputPacketStream.cpp  COutputPacketStream.h  CProtocolUtil.cpp  CProtocolUtil.h  CScreenMap.cpp  CScreenMap.h  CServer.cpp  CServer.h  CServerProtocol.cpp  CServerProtocol.h  CServerProtocol1_0.cpp  CServerProtocol1_0.h  CTCPSocketFactory.cpp  CTCPSocketFactory.h  CXWindowsClipboard.cpp  CXWindowsClipboard.h  CXWindowsPrimaryScreen.cpp  CXWindowsPrimaryScreen.h  CXWindowsScreen.cpp  CXWindowsScreen.h  CXWindowsSecondaryScreen.cpp  CXWindowsSecondaryScreen.h  CXWindowsUtil.cpp  CXWindowsUtil.h  ClipboardTypes.h  IClient.h  IClipboard.h  IPrimaryScreen.h  IScreen.h  (+21 more)
(+10416 files in other folders)
