dnl Process this file with autoconf to produce a configure script.

AC_INIT(base/common.h)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(synergy, 0.5)

dnl information on the package

dnl checks for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl checks for libraries
ACX_PTHREAD(,AC_MSG_ERROR(You must have pthreads to compile synergy))

dnl checks for header files
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([unistd.h sys/time.h])
AC_CHECK_HEADERS([istream ostream])
AC_CHECK_HEADERS([windows.h])
AC_PATH_X
AC_PATH_XTRA
AC_CHECK_HEADERS([X11/extensions/XTest.h])

dnl checks for types
dnl AC_TYPE_SIZE_T

dnl checks for structures
AC_STRUCT_TM

dnl checks for compiler characteristics
AC_CHECK_SIZEOF(char, 1)
AC_CHECK_SIZEOF(short, 2)
AC_CHECK_SIZEOF(int, 2)
AC_CHECK_SIZEOF(long, 4)
dnl should check for bool
dnl should require template support
dnl should require exception support

dnl checks for library functions
dnl AC_TYPE_SIGNAL
dnl AC_FUNC_FORK
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
dnl use AC_REPLACE_FUNCS() for stuff in string.h
dnl AC_HEADER_SYS_WAIT

dnl checks for system services


dnl adjust variables for X11 and pthreads
LIBS="$X_PRE_LIBS $LIBS $X_EXTRA_LIBS $X_LIBS $PTHREAD_LIBS"
CFLAGS="$CFLAGS $X_CFLAGS $PTHREAD_CFLAGS"
CXXFLAGS="$CXXFLAGS $X_CFLAGS $PTHREAD_CFLAGS"
CC="$PTHREAD_CC"

AC_OUTPUT([
Makefile
base/Makefile
mt/Makefile
io/Makefile
http/Makefile
net/Makefile
synergy/Makefile
platform/Makefile
client/Makefile
server/Makefile
])

