dnl Process this file with autoconf to produce a configure script.

dnl initialize
AC_INIT(lib/base/common.h)
AC_CONFIG_AUX_DIR(config)

dnl current version
MAJOR_VERSION=0
MINOR_VERSION=9
RELEASE_VERSION=8

dnl initialize automake
AM_INIT_AUTOMAKE(synergy, $MAJOR_VERSION.$MINOR_VERSION.$RELEASE_VERSION)
AM_CONFIG_HEADER(config.h)

dnl information on the package

dnl checks for programs
AC_PROG_CXX
AC_PROG_RANLIB

dnl checks for libraries
ACX_PTHREAD(,AC_MSG_ERROR(You must have pthreads to compile synergy))

dnl checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h sys/time.h])
AC_CHECK_HEADERS([istream ostream])
AC_CHECK_HEADERS([windows.h])
AC_HEADER_TIME
AC_PATH_X
AC_PATH_XTRA
AC_CHECK_HEADERS([X11/extensions/XTest.h])

dnl checks for types
dnl AC_TYPE_SIZE_T

dnl checks for structures
AC_STRUCT_TM

dnl checks for compiler characteristics
AC_CHECK_SIZEOF(char, 1)
AC_CHECK_SIZEOF(short, 2)
AC_CHECK_SIZEOF(int, 2)
AC_CHECK_SIZEOF(long, 4)
dnl require bool support
dnl require template support
dnl require exception support
dnl require C++ casting support
dnl require mutable support

dnl checks for library functions
dnl AC_TYPE_SIGNAL
AC_FUNC_FORK
AC_FUNC_MEMCMP
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(gmtime_r)
AC_CHECK_FUNCS(getpwuid_r)
AC_CHECK_FUNCS(vsnprintf)
dnl use AC_REPLACE_FUNCS() for stuff in string.h

dnl checks for system services


dnl adjust variables for X11 and pthreads
CXXFLAGS="$CXXFLAGS $X_CFLAGS $PTHREAD_CFLAGS"

AC_OUTPUT([
Makefile
lib/Makefile
lib/base/Makefile
lib/mt/Makefile
lib/io/Makefile
lib/http/Makefile
lib/net/Makefile
lib/synergy/Makefile
lib/platform/Makefile
lib/client/Makefile
lib/server/Makefile
cmd/Makefile
cmd/synergy/Makefile
cmd/synergyd/Makefile
dist/Makefile
dist/rpm/Makefile
dist/rpm/synergy.spec
])

